<resources>
    <string name="app_name">Sim Town</string>
    <string name="author_name">Seain Malkin</string>
    <string name="author_id">19097842</string>

    <string name="settings_title">Settings</string>
    <string name="settings_name">Town Name</string>
    <string name="settings_money">Initial Money</string>
    <string name="settings_map_width">Map Width</string>
    <string name="settings_map_height">Map Height</string>
    <string name="settings_action_save">Save</string>
    <string name="settings_action_cancel">Cancel</string>


    <string name="title_author">by %1$s (%2$s)</string>
    <string name="title_action_resume">Resume Game</string>
    <string name="title_action_new">New Game</string>
    <string name="title_action_settings">Settings</string>

    <string name="meta_tick_value">%1$d</string>
    <string name="meta_name">%1$s</string>
    <string name="meta_temperature">%1$d°</string>
    <string name="meta_temperature_null">\?°</string>

    <string name="details_title">Details</string>
    <string name="details_coord">row = %1$d, col = %2$d</string>
    <string name="details_type">Type: %1$s</string>
    <string name="details_name">Name</string>

    <string name="values_money">%1$d</string>
    <string name="values_money_change">%1$s %2$d</string>
    <string name="values_population">%1$d</string>
    <string name="values_empl_rate">%1$d%%</string>

</resources>