<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsAct"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_title"
            style="@style/formTitle"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/detailsCoord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_coord"
            android:paddingTop="8dp"
            style="@style/formLabel"/>

        <TextView
            android:id="@+id/detailsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_type"
            android:paddingTop="8dp"
            style="@style/formLabel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/detailsName"
            android:text="@string/details_name"
            android:paddingTop="8dp"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/detailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_name"
            android:layout_gravity="center"
            android:inputType="text"
            style="@style/formInput"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsLLActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="right">

        <Button
            android:id="@+id/detailsActionCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_action_cancel"
            style="@style/formActionCancel"
            android:layout_marginRight="4dp"/>

        <Button
            android:id="@+id/detailsActionSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_action_save"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>