<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleAct">

    <LinearLayout
        android:id="@+id/titleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleActions"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="16dp"
            style="@style/titleH3"/>

        <TextView
            android:id="@+id/titleAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_author"
            android:textAppearance="@style/titleH6"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/titleActionResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_start"
            android:text="@string/title_action_resume"
            android:visibility="gone"
            style="@style/titleButton"/>

        <Button
            android:id="@+id/titleActionNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_start"
            android:text="@string/title_action_new"
            style="@style/titleButton"/>

        <Button
            android:id="@+id/titleActionSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_settings"
            android:visibility="gone"
            android:text="@string/title_action_settings"
            style="@style/titleButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>