<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ValuesFrag"
    android:orientation="horizontal"
    style="@style/values">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_money"
            android:layout_marginEnd="-4dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/valuesMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/values_money"
            style="@style/valuesText"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_change"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/valuesMoneyChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/values_money_change"
            style="@style/valuesText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_work"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/valuesEmplRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/values_empl_rate"
            style="@style/valuesText"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_face"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/valuesPopulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/values_population"
            style="@style/valuesText"/>

    </LinearLayout>




</LinearLayout>